--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="cartContainer">
-        <div style="position:relative;overflow:hidden;"><a href="https://yandex.by/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.by/maps/2/saint-petersburg/house/furshtatskaya_ulitsa_1_14/Z0kYdQNpTUcOQFtjfXV1dHxlYw==/?ll=30.349429%2C59.945067&utm_medium=mapframe&utm_source=maps&z=17.09" style="color:#eee;font-size:12px;position:absolute;top:14px;">Фурштатская улица, 1/14 — Яндекс Карты</a><iframe src="https://yandex.by/map-widget/v1/-/CCUVuPUzWB" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+        <div class="frame" style="position:relative;overflow:hidden;"><a href="https://yandex.by/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.by/maps/2/saint-petersburg/house/furshtatskaya_ulitsa_1_14/Z0kYdQNpTUcOQFtjfXV1dHxlYw==/?ll=30.349429%2C59.945067&utm_medium=mapframe&utm_source=maps&z=17.09" style="color:#eee;font-size:12px;position:absolute;top:14px;">Фурштатская улица, 1/14 — Яндекс Карты</a><iframe src="https://yandex.by/map-widget/v1/-/CCUVuPUzWB" width="712" height="300" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 
         <div class="contactsContainer">
             <div class="contacts">
@@ -15,16 +15,16 @@
 
             <button>Задать вопрос в чате</button>
         </div>
+    </div>
 
-        <div>
-            Санкт-Петербург г, ул Фурштатская, д. 28, литера А, помещ. 20-Н Р.М. №1
-        </div>
+    <div class="adres">
+        Санкт-Петербург г, ул Фурштатская, д. 28, литера А, помещ. 20-Н Р.М. №1
     </div>
 
     <div class="socialNetworkContainer">
         <div class="socialTitle">
-            <p>Давайте дружить в соцсетях</p>
-            <p>Делимся знаниями и новостями в сфере недвижимости и маркетинге:</p>
+            <p class="textTitle">Давайте дружить в соцсетях</p>
+            <p class="textSubtitle">Делимся знаниями и новостями в сфере недвижимости и маркетинге:</p>
         </div>
 
         <div class="btnContainer">
