--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,3 +1,19 @@
 <header class="header">
-  
+    <div class="logoContainer">
+        <img src="../assets/images/header/logo.png" alt="#">
+    </div>
+    <div class="menuItemsContainer">
+        <div class="menuItemsHelper">
+            <div class="menuItem">Возможности CRM</div>
+            <div class="menuItem">Цены</div>
+            <div class="menuItem">8 800 111 33 22 </div>
+        </div>
+        <button class="btnCall">Свяжитесь со мной</button>
+        <button class="btnInit">Вход</button>
+        <button class="burgerBtn">
+            <svg>
+                <use href="#burgerIco"></use>
+            </svg>
+        </button>
+    </div>
 </header>
