--- a/src/partials/sprite.html
+++ b/src/partials/sprite.html
@@ -17,4 +17,18 @@
             <path fill-rule="evenodd" clip-rule="evenodd" d="M35.5793 0.838099C37.3024 1.29896 38.6466 2.64825 39.1125 4.37134C40.3313 9.28716 40.2519 18.5811 39.1381 23.5737C38.6773 25.2968 37.328 26.641 35.6049 27.107C30.7403 28.3103 8.95196 28.1618 4.36899 27.107C2.64589 26.6461 1.30173 25.2968 0.835748 23.5737C-0.313836 18.8884 -0.234466 8.97992 0.810145 4.39694C1.271 2.67385 2.62029 1.32968 4.34339 0.863702C10.8466 -0.493268 33.2648 -0.0554531 35.5793 0.838099ZM16.121 7.9815L26.5671 13.9726L16.121 19.9638V7.9815Z"></path>
         </g>
     </symbol>
+
+    <symbol id="burgerIco" viewBox="0 0 24 12">
+        <g>
+            <rect width="24" height="2" fill="white"/>
+            <rect y="10" width="24" height="2" fill="white"/>
+            <rect y="5" width="24" height="2" fill="white"/>
+        </g>
+    </symbol>
+
+    <symbol id="arrowDown" viewBox="0 0 24 12">
+        <g>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M3.25586 12.5007L6.81945 0L8.77287 0.559371L5.94397 10.4829L12.3579 10.4947L9.42412 21.3785L14.4832 15.7423L16 17.0875L8 26L0 17.0875L1.51676 15.7423L7.14792 22.0158L9.70955 12.5126L3.25586 12.5007Z"/>
+        </g>
+    </symbol>
 </svg>
