--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,6 +6,11 @@
 html {
   box-sizing: border-box;
   font-size: calc(100vw / 1920 * 10);
+
+  @include breakpoint($mm-bp) {
+    font-size: calc(100vw / 1440 * 10);
+  }
+
   @include breakpoint($cos-bp) {
     font-size: calc(100vw / 1330 * 10);
   }
@@ -62,6 +67,7 @@ svg {
 @import './blocks/main.scss';
 @import './blocks/header.scss';
 @import './blocks/footer.scss';
+
 
 
 
