--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -75,10 +75,22 @@
         .formContainer {
 
             .verticalContainer {
+                display: flex;
+                position: relative;
+                margin-top: 15.8rem;
+                
 
                 .vertText {
                     display: flex;
                     flex-direction: column;
+                    background: #9FF612;
+                    padding-left: 2.2rem;
+                    padding-top: 6.5rem;
+                    padding-bottom: 6.5rem;
+                    border-radius: 2.4rem;
+                    padding-right: 6rem;
+                    position: absolute;
+                    align-items: end;
                     p {
                         font-family: 'Nunito Sans';
                         font-style: normal;
@@ -92,10 +104,260 @@
 
                     svg {
                         fill: #3A3A3B;
-                        width: 1.6rem;
-                        height: 2.6rem;
+                        width: 2.1rem;
+                        height: 3.7rem;
                     }
                 }
+            }
+
+            .recallContainer {
+                background-color: #FFFFFF;
+                border-radius: 2.4rem;
+                padding: 5rem;
+                display: flex;
+                flex-direction: column;
+                gap: 3rem;
+                margin-left: 6rem;
+                z-index: 1;
+
+                .vertTitle {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 3.2rem;
+                    line-height: 4.4rem;
+                    color: #3A3A3B;
+                    width: 30rem;
+                }
+
+                .vertSubtitle {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 1.6rem;
+                    line-height: 2.2rem;
+                    color: #3A3A3B;
+                    width: 31rem;
+                }
+            }
+
+            form {
+                padding: 5rem 5rem 4rem 5rem;
+                background: #FFFFFF;
+                border-radius: 2.4rem;
+                font-family: 'Nunito Sans';
+
+                .inpContainer {
+                    display: flex;
+                    gap: 1rem;
+
+                    .nameContainer {
+
+                        P {
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 1.6rem;
+                            line-height: 2.2rem;
+                            color: #3A3A3B;
+                            margin-bottom: 0.8rem;
+                        }
+
+                        input {
+                            width: 20rem;
+                            height: 4rem;
+                            border: 0.1rem solid #DADADB;
+                            border-radius: 0.6rem;
+                            padding-left: 1rem;
+                            font-family: "Nunito Sans";
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 1.6rem;
+                            line-height: 2.2rem;
+                            color: #3A3A3B;
+                            outline: none;
+                        }
+                    }
+
+                    .telContainer {
+
+                        P {
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 1.6rem;
+                            line-height: 2.2rem;
+                            color: #3A3A3B;
+                            margin-bottom: 0.8rem;
+                        }
+
+                        input {
+                            width: 30rem;
+                            height: 4rem;
+                            border: 0.1rem solid #DADADB;
+                            border-radius: 0.6rem;
+                            padding-left: 1rem;
+                            font-family: "Nunito Sans";
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 1.6rem;
+                            line-height: 2.2rem;
+                            color: #3A3A3B;
+                            outline: none;
+                        }
+                    }
+                    
+                }
+
+                .submitContainer {
+                    display: flex;
+                    gap: 1.8rem;
+                    font-family: 'Nunito Sans';
+                    align-items: center;
+                    margin-top: 6rem;
+
+                    button {
+                        font-family: 'Nunito Sans';
+                        font-style: normal;
+                        font-weight: 600;
+                        font-size: 1.6rem;
+                        line-height: 2rem;
+                        text-align: center;
+                        color: #FFFFFF;
+                        padding: 1rem 2rem 1rem 2rem;
+                        background: #124BF6;
+                        border-top: 0.1rem solid #F86247;
+                        border-left: 0.1rem solid #F86247;
+                        border-bottom: 0.3rem solid #F86247;
+                        border-right: 0.3rem solid #F86247;
+                        border-radius: 0.6rem;
+                    }
+
+                    .licence {
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 1.2rem;
+                        line-height: 1.6rem;
+                        color: #3A3A3B;
+                        width: 27.2rem;
+
+                        a {
+                            color: #3A3A3B;
+                            text-decoration: underline;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    .benefitsContainer {
+        .benefitsTitle {
+            padding-left: 18rem;
+            margin-top: 15rem;
+            font-family: 'Mulish';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 7.2rem;
+            line-height: 9rem;
+            text-transform: uppercase;
+            color: #3A3A3B;
+
+            span {
+                color: #F86247;
+            }
+        }
+
+        .benefitsSubtitle {
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 1.6rem;
+            line-height: 2.2rem;
+            color: #3A3A3B;
+            width: 42.7rem;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 3rem;
+        }
+
+        .algoritmContainer {
+            margin-top: 7rem;
+
+            .algoritmLine {
+                background-image: url(../images/footer/footerBg.png);
+                background-color: #3A3A3B;
+                font-family: 'Mulish';
+                font-style: normal;
+                font-weight: 900;
+                font-size: 7.2rem;
+                line-height: 9rem;
+                text-transform: uppercase;
+                color: #FFFFFF;
+                white-space: nowrap;
+                overflow: hidden;
+                transform: rotate(-1deg);
+                
+
+                span {
+                    color: #9FF612;
+                }
+            }
+
+            .requestContainer {
+                margin-top: 5.6rem;
+                display: flex;
+                gap: 11.6rem;
+                justify-content: center;
+
+                .smartRequest {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 800;
+                    font-size: 2.4rem;
+                    line-height: 3.3rem;
+                    color: #3A3A3B;
+                    width: 43.6rem;
+                }
+
+                .smartAlgoritm {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 1.8rem;
+                    line-height: 2.5rem;
+                    color: #3A3A3B;
+                    width: 43.6rem;
+                    padding-top: 3.8rem;
+                }
+            }
+
+            .listContainer {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                column-gap: 7.6rem;
+                row-gap: 3rem;
+                margin-top: 5rem;
+
+                li {
+                    position: relative;
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 1.6rem;
+                    line-height: 2.2rem;
+                    color: #3A3A3B;
+                    width: 43.6rem;
+                }
+
+                li:before {
+                    content: url(../images/listContainer/greenTriangle.svg);
+                    position: absolute;
+                    width: 2rem;
+                    height: 2rem;
+                    top: 0;
+                    left: -3rem;
+                }
+
             }
         }
     }
