--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -1210,11 +1210,435 @@
                 }
             }
         }
+    }
 
+    .cta1 {
+        background: url(../images/cta1/ctaArrows.png) no-repeat right, url(../images/cta1/ctaBg.png);
+        padding-left: 18rem;
+        padding-bottom: 11rem;
+        padding-top: 11.5rem;
+
+        .ctaTitle {
+            font-family: 'Mulish';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 4.8rem;
+            line-height: 6rem;
+            text-transform: uppercase;
+            color: #FFFFFF;
+
+            span {
+                color: #3A3A3B;
+            }
+        }
+
+        .ctaSubtitle {
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 2.4rem;
+            line-height: 3.3rem;
+            color: #FFFFFF;
+            margin-top: 3rem;
+        }
+
+        button {
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 2.4rem;
+            line-height: 3.4rem;
+            text-align: center;
+            color: #FFFFFF;
+            padding: 1rem 2rem;
+            background: #3A3A3B;
+            border-radius: 0.6rem;
+            border-top: 0.1rem solid #9FF612;
+            border-left: 0.1rem solid #9FF612;
+            border-right: 0.3rem solid #9FF612;
+            border-bottom: 0.3rem solid #9FF612;
+            margin-top: 4rem;
+        }
+    }
+
+    .integration {
+        padding-top: 15rem;
+        position: relative;
+        padding-bottom: 20rem;
+
+        .integrationTitle {
+            font-family: 'Mulish';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 7.2rem;
+            line-height: 9rem;
+            text-transform: uppercase;
+            color: #3A3A3B;
+            padding-left: 18rem;
+        }
+
+        .integrationContainer {
+            display: flex;
+            gap: 2.3rem;
+            margin-top: 5rem;
+            padding-left: 18rem;
+
+            .integrationContainerTitle {
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 2.4rem;
+                line-height: 3.3rem;
+                color: #124BF6;
+                width: 34.5rem;
+            }
+
+            .integrationContainerSubtitle {
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 1.6rem;
+                line-height: 2.2rem;
+                color: #3A3A3B;
+                width: 46rem;
+            }
+        }
+
+        .orangeTicketLine {
+            display: flex;
+            transform: rotate(1deg);
+            overflow: hidden;
+            margin-right: 0.1rem;
+            position: relative;
+            z-index: 3;
+            margin-top: 5rem;
+            
+            div {
+                background: #F86247;
+                border-radius: 1.2rem;
+                border: 0.1rem solid #9FF612;
+                padding: 3.5rem;
+                display: flex;
+                align-items: center;
+            }
+
+        }
+
+        .greenTicketLine {
+            display: flex;
+            transform: rotate(-2deg);
+            overflow: hidden;
+            margin-right: 0.2rem;
+            position: relative;
+            z-index: 2;
+            
+            div {
+                background: #9FF612;
+                border-radius: 1.2rem;
+                border: 0.1rem solid #3A3A3B;
+                padding: 3.5rem;
+                display: flex;
+                align-items: center;
+            }
+        }
+
+        .blueTicketLine {
+            display: flex;
+            transform: rotate(2deg);
+            overflow: hidden;
+            margin-right: 0.2rem;
+            position: relative;
+            z-index: 1;
+            
+            
+            div {
+                background: #124BF6;
+                border-radius: 1.2rem;
+                border: 0.1rem dashed #FFFFFF;
+                padding: 3.5rem;
+                display: flex;
+                align-items: center;
+            }
+        }
+
+        .blackBlock {
+            background-color: #3A3A3B;
+            width: 100%;
+            height: 30rem;
+            position: absolute;
+            bottom: 0rem;
+            background-image: url(../images/footer/footerBg.png);
+        }
+    }
+
+    .more {
+        // background-color: #3A3A3B;
+        // background-image: url(../images/footer/footerBg.png);
+        background: url(../images/more/arrowBg.png) no-repeat bottom right, url(../images/footer/footerBg.png), #3A3A3B ;
+        padding-bottom: 15rem;
+
+        .moreTitle {
+            font-family: 'Mulish';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 7.2rem;
+            line-height: 9rem;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            text-align: center;
+        }
+
+        .interfaceContainer {
+            display: flex;
+            gap: 5rem;
+            justify-content: center;
+            margin-top: 7rem;
+
+            .interfaceTitle {
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 800;
+                font-size: 3rem;
+                line-height: 4.1rem;
+                color: #FFFFFF;
+                margin-top: 3.4rem;
+            }
+
+            .interfaceSubtitle {
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 1.8rem;
+                line-height: 2.5rem;
+                color: #9FF612;
+                width: 37.6rem;
+                margin-top: 4rem;
+            }
+
+            .interfaceText {
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 1.6rem;
+                line-height: 2.2rem;
+                color: #FFFFFF;
+                width: 43.6rem;
+                margin-top: 5rem;
+            }
+        }
+
+        .sistemContainer {
+            margin-top: 7rem;
+
+            .sistemTitle {
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 800;
+                font-size: 3rem;
+                line-height: 4.1rem;
+                color: #FFFFFF;
+                margin-top: 3rem;
+            }
+
+            .teachContainer {
+                display: flex;
+                justify-content: center;
+                gap: 15rem;
+                margin-top: 3rem;
+
+                .leftContainer {
+
+                    .teachLeftTitle {
+                        font-family: 'Nunito Sans';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 1.8rem;
+                        line-height: 2.5rem;
+                        color: #9FF612;
+                        width: 37.6rem;
+                        margin-top: 3rem;
+                    }
+
+                    .teachLeftSubtitle {
+                        font-family: 'Nunito Sans';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 1.8rem;
+                        line-height: 2.5rem;
+                        color: #FFFFFF;
+                        margin-top: 5rem;
+                        width: 37.6rem;
+                    }
+
+                    .teachLeftText {
+                        font-family: 'Nunito Sans';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 1.6rem;
+                        line-height: 2.2rem;
+                        color: #FFFFFF;
+                        margin-top: 3rem;
+                        width: 40rem;
+                    }
+                }
+
+                .rightContainer {
+                    
+                    .teachRightTitle {
+                        font-family: 'Nunito Sans';
+                        font-style: normal;
+                        font-weight: 700;
+                        font-size: 1.8rem;
+                        line-height: 2.5rem;
+                        color: #FFFFFF;
+                        margin-top: 15rem;
+                    }
+
+                    ul {
+                        display: flex;
+                        flex-direction: column;
+                        gap: 3rem;
+                        margin-top: 3rem;
+
+                        li {
+                            position: relative;
+                            font-family: 'Nunito Sans';
+                            font-style: normal;
+                            font-weight: 400;
+                            font-size: 1.6rem;
+                            line-height: 2.2rem;
+                            color: #FFFFFF;
+                            width: 46.2rem;
+                        }
         
+                        li:before {
+                            content: url(../images/listContainer/greenTriangle.svg);
+                            position: absolute;
+                            width: 2rem;
+                            height: 2rem;
+                            top: 0;
+                            left: -3rem;
+                        }
+        
+                    }
+                }
+            }
+
+            .bigImgContainer {
+                display: flex;
+                justify-content: center;
+                margin-top: 7rem;
+            }
 
 
+        }
 
+        .updateContainer {
+            display: flex;
+            justify-content: center;
+            gap: 5rem;
+            margin-top: 7rem;
 
+            .leftContainer {
+
+                .starsContainer {
+                    display: flex;
+                    gap: 2.4rem;
+                }
+
+                .updateLeftTitle {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 800;
+                    font-size: 3rem;
+                    line-height: 4.1rem;
+                    color: #FFFFFF;
+                    width: 32.2rem;
+                    margin-top: 3rem;
+                }
+
+                .updateLeftSubtitle {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 1.8rem;
+                    line-height: 2.5rem;
+                    color: #9FF612;
+                    width: 41.5rem;
+                    margin-top: 3rem;
+                }
+
+                ul {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 3rem;
+                    margin-top: 3rem;
+
+                    li {
+                        position: relative;
+                        font-family: 'Nunito Sans';
+                        font-style: normal;
+                        font-weight: 400;
+                        font-size: 1.6rem;
+                        line-height: 2.2rem;
+                        color: #FFFFFF;
+                        width: 46.2rem;
+                        display: flex;
+                        gap: 1rem;
+
+                        span {
+                            width: 4rem;
+                            height: 4rem;
+                            border: #9FF612 solid 0.2rem;
+                            border-radius: 50%;
+                            font-size: 2rem;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                        }
+                    }
+    
+                    li:before {
+                        content: url(../images/listContainer/greenTriangle.svg);
+                        position: absolute;
+                        width: 2rem;
+                        height: 2rem;
+                        top: 0;
+                        left: -3rem;
+                    }
+    
+                }
+            }
+
+            .rightContainer {
+                
+                .starsContainer {
+                    display: flex;
+                    gap: 2.4rem;
+                }
+
+                .updateRightTitle {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 800;
+                    font-size: 3rem;
+                    line-height: 4.1rem;
+                    color: #FFFFFF;
+                    width: 32.8rem;
+                    margin-top: 3rem;
+                }
+
+                .updateRightText {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 400;
+                    font-size: 1.6rem;
+                    line-height: 2.2rem;
+                    color: #FFFFFF;
+                    width: 46.2rem;
+                    margin-top: 3rem;
+                }
+            }
+        }
     }
 }
