--- a/src/assets/scss/blocks/main.scss
+++ b/src/assets/scss/blocks/main.scss
@@ -2195,6 +2195,7 @@
         background-image: url(../images/footer/footerBg.png);
         background-color: #3A3A3B;
         padding-top: 15rem;
+        padding-bottom: 15rem;
 
         .titleContainer {
             display: flex;
@@ -2222,6 +2223,11 @@
                     display: flex;
                     align-items: center;
                     gap: 2rem;
+
+                    button {
+                        background: none;
+                        border: none;
+                    }
                 }
 
                 .listContainer {
@@ -2432,6 +2438,134 @@
                     line-height: 3rem;
                     color: #FFFFFF;
                 }
+
+                .rotateContainer {
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 900;
+                    font-size: 2.4rem;
+                    line-height: 3.3rem;
+                    text-transform: uppercase;
+                    color: #3A3A3B;
+                    transform: rotate(-16.86deg);
+                    padding: 1rem 2rem 1rem 2rem;
+                    background: #FFFFFF;
+                    border-radius: 0.5rem;
+                    width: 70%;
+                    margin-top: 2rem;
+                }
+
+                button {
+                    margin-top: 7.5rem;
+                    font-family: 'Nunito Sans';
+                    font-style: normal;
+                    font-weight: 600;
+                    font-size: 1.6rem;
+                    line-height: 2rem;
+                    text-align: center;
+                    color: #FFFFFF;
+                    width: 100%;
+                    background: #3A3A3B;
+                    border-radius: 0.6rem;
+                    border-top: 0.1rem solid #9FF612;
+                    border-left: 0.1rem solid #9FF612;
+                    border-right: 0.3rem solid #9FF612;
+                    border-bottom: 0.3rem solid #9FF612;
+                    padding: 1rem 0;
+                }
+            }
+        }
+    }
+
+    .cta3 {
+        background: #124BF6;
+        padding-top: 12rem;
+        padding-left: 18rem;
+        padding-bottom: 11.7rem;
+
+        .ctaTitle {
+            font-family: 'Mulish';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 4.8rem;
+            line-height: 5.8rem;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            margin-bottom: 3rem;
+        }
+
+        .ctaSubtitle {
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 2.4rem;
+            line-height: 3rem;
+            color: #FFFFFF;
+            margin-bottom: 6rem;
+        }
+
+        button {
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 600;
+            font-size: 1.6rem;
+            line-height: 2rem;
+            text-align: center;
+            color: #FFFFFF;
+            background: #F86247;
+            border-radius: 0.6rem;
+            border-top: 0.1rem solid #9FF612;
+            border-left: 0.1rem solid #9FF612;
+            border-right: 0.3rem solid #9FF612;
+            border-bottom: 0.3rem solid #9FF612;
+            padding: 1rem 2rem 1rem 2rem;
+        }
+    }
+
+    .help {
+        background-image: url(../images/footer/footerBg.png);
+        background-color: #3A3A3B;
+        padding-top: 15rem;
+        padding-left: 18rem;
+
+        .helpTitle {
+            font-family: 'Mulish';
+            font-style: normal;
+            font-weight: 900;
+            font-size: 7.2rem;
+            line-height: 9rem;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            margin-bottom: 5rem;
+
+            span {
+                color: #9FF612;
+            }
+        }
+
+        .arrowListContainer {
+            display: flex;
+            gap: 3rem;
+            align-items: center;
+            margin-bottom: 5rem;
+
+            .helpImgContainer {
+                display: flex;
+                gap: 2rem;
+
+                button {
+                    border: none;
+                    background: none;
+                }
+            }
+
+            .listContainer {
+                font-family: 'Nunito Sans';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 1.4rem;
+                line-height: 1.9rem;
+                color: #FFFFFF;
             }
         }
     }
